--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
     <header>
         <div class="container">
             <div class="title-container">
-                <h1>Vision Conference</h1>
+                <h1>Vision Mini Conference 2025 </h1>
                 <p>Showcasing Cutting-Edge Research and Innovation</p>
             </div>
         </div>
