--- a/index.html
+++ b/index.html
@@ -527,8 +527,8 @@
         </div>
         
         <div class="alumni-section">
-            <h2>Alumni Photos</h2>
-            <p>Meet our distinguished alumni who have made significant contributions to their fields.</p>
+            <h2>Alumni Panel</h2>
+            <p>Meet our Alumni who have made significant contributions to their fields.</p>
             
             <div class="photo-gallery">
                 <!-- Photo Placeholders - These can be replaced with actual alumni photos -->
