--- a/index.html
+++ b/index.html
@@ -534,12 +534,12 @@
                 <!-- Photo Placeholders - These can be replaced with actual alumni photos -->
                 <div class="photo-card">
                     <div class="photo-placeholder">
-                        <img src="/api/placeholder/200/200" alt="Alumni Photo Placeholder">
+                        <img src="Unnat.jpeg" alt="Alumni Photo Placeholder">
                     </div>
                     <div class="photo-info">
-                        <h4>Alumni Name</h4>
+                        <h4>Unnat Jain</h4>
                         <p>Class of 20XX</p>
-                        <p>Current Position</p>
+                        <p>Research @ Skild.ai </p>
                     </div>
                 </div>
                 
