--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
         <div class="photo-card">
             <a href="https://unnat.github.io/" target="_blank" class="alumni-link">
                 <div class="photo-placeholder">
-                    <img src="images/unnat-jain.jpg" alt="Photo of Unnat Jain">
+                    <img src="Unnat.jpeg" alt="Photo of Unnat Jain">
                 </div>
                 <div class="photo-info">
                     <h4>Unnat Jain</h4>
@@ -549,7 +549,7 @@
         <div class="photo-card">
             <a href="https://bryanplummer.com/" target="_blank" class="alumni-link">
                 <div class="photo-placeholder">
-                    <img src="images/bryan-plummer.jpg" alt="Photo of Bryan A. Plummer">
+                    <img src="Bryan.jpg" alt="Photo of Bryan A. Plummer">
                 </div>
                 <div class="photo-info">
                     <h4>Bryan A. Plummer</h4>
@@ -563,7 +563,7 @@
         <div class="photo-card">
             <a href="https://www.kevinkarsch.com/" target="_blank" class="alumni-link">
                 <div class="photo-placeholder">
-                    <img src="images/kevin-karsch.jpg" alt="Photo of Kevin Karsch">
+                    <img src="kevin.jpg" alt="Photo of Kevin Karsch">
                 </div>
                 <div class="photo-info">
                     <h4>Kevin Karsch</h4>
@@ -577,7 +577,7 @@
         <div class="photo-card">
             <a href="https://bowenc0221.github.io/" target="_blank" class="alumni-link">
                 <div class="photo-placeholder">
-                    <img src="images/bowen-cheng.jpg" alt="Photo of Bowen Cheng">
+                    <img src="Bowen.jpg" alt="Photo of Bowen Cheng">
                 </div>
                 <div class="photo-info">
                     <h4>Bowen Cheng</h4>
@@ -591,7 +591,7 @@
         <div class="photo-card">
             <a href="https://www.danielbmckee.com/" target="_blank" class="alumni-link">
                 <div class="photo-placeholder">
-                    <img src="images/daniel-mckee.jpg" alt="Photo of Daniel Mckee">
+                    <img src="Daniel.jpg" alt="Photo of Daniel Mckee">
                 </div>
                 <div class="photo-info">
                     <h4>Daniel Mckee</h4>
@@ -605,7 +605,7 @@
         <div class="photo-card">
             <a href="https://jason718.github.io/" target="_blank" class="alumni-link">
                 <div class="photo-placeholder">
-                    <img src="images/jason-ren.jpg" alt="Photo of Jason Ren">
+                    <img src="Jason.png" alt="Photo of Jason Ren">
                 </div>
                 <div class="photo-info">
                     <h4>Jason Ren</h4>
@@ -619,7 +619,7 @@
         <div class="photo-card">
             <a href="https://anandbhattad.github.io/" target="_blank" class="alumni-link">
                 <div class="photo-placeholder">
-                    <img src="images/anand-bhattad.jpg" alt="Photo of Anand Bhattad">
+                    <img src="Anand.png" alt="Photo of Anand Bhattad">
                 </div>
                 <div class="photo-info">
                     <h4>Anand Bhattad</h4>
@@ -633,7 +633,7 @@
         <div class="photo-card">
             <a href="https://zouchuhang.github.io/" target="_blank" class="alumni-link">
                 <div class="photo-placeholder">
-                    <img src="images/chuhang-zou.jpg" alt="Photo of Chuhang Zou">
+                    <img src="Chuhang.png" alt="Photo of Chuhang Zou">
                 </div>
                 <div class="photo-info">
                     <h4>Chuhang Zou</h4>
