--- a/index.html
+++ b/index.html
@@ -539,8 +539,7 @@
                 </div>
                 <div class="photo-info">
                     <h4>Unnat Jain</h4>
-                    <p>Research Scientist</p>
-                    <p>Skild AI</p>
+                    <p>Research @ Skild AI</p>
                 </div>
             </a>
         </div>
@@ -553,8 +552,7 @@
                 </div>
                 <div class="photo-info">
                     <h4>Bryan A. Plummer</h4>
-                    <p>Research Faculty</p>
-                    <p>Boston University</p>
+                    <p>Research @ Boston University</p>
                 </div>
             </a>
         </div>
@@ -567,8 +565,7 @@
                 </div>
                 <div class="photo-info">
                     <h4>Kevin Karsch</h4>
-                    <p>Research Scientist</p>
-                    <p>Amazon</p>
+                    <p>Research @ Amazon</p>
                 </div>
             </a>
         </div>
@@ -581,8 +578,7 @@
                 </div>
                 <div class="photo-info">
                     <h4>Bowen Cheng</h4>
-                    <p>Research Scientist</p>
-                    <p>OpenAI</p>
+                    <p>Research @ OpenAI</p>
                 </div>
             </a>
         </div>
@@ -595,8 +591,7 @@
                 </div>
                 <div class="photo-info">
                     <h4>Daniel Mckee</h4>
-                    <p>Research Scientist</p>
-                    <p>Snap</p>
+                    <p>Research @ Snapchat</p>
                 </div>
             </a>
         </div>
@@ -609,8 +604,7 @@
                 </div>
                 <div class="photo-info">
                     <h4>Jason Ren</h4>
-                    <p>Research Scientist</p>
-                    <p>Apple</p>
+                    <p>Research @ Apple</p>
                 </div>
             </a>
         </div>
@@ -623,8 +617,7 @@
                 </div>
                 <div class="photo-info">
                     <h4>Anand Bhattad</h4>
-                    <p>Research Scientist</p>
-                    <p>TTIC</p>
+                    <p>Research @ TTIC </p>
                 </div>
             </a>
         </div>
@@ -637,8 +630,7 @@
                 </div>
                 <div class="photo-info">
                     <h4>Chuhang Zou</h4>
-                    <p>Research Scientist</p>
-                    <p>Amazon</p>
+                    <p>Research @ Amazon</p>
                 </div>
             </a>
         </div>
