--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             left: 50%;
             width: 90%;
             height: 90%;
-            background-image: url('images/conference-logo.png'); /* Replace with your logo path */
+            background-image: url('seibel_1.jpg'); /* Replace with your logo path */
             background-repeat: no-repeat;
             background-position: center;
             background-size: contain;
