--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
                         </tr>
                         <tr>
                             <td>10:10-10:20</td>
-                            <td>Achieving perfect alignment for cross-modal transfer</td>
+                            <td>C3T: Cross-modal Transfer Through Time for Human Action Recognition</td>
                             <td>Abhi Kamboj</td>
                         </tr>
                         <tr class="break">
