--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
                         </tr>
                         <tr>
                             <td>3:10-3:20</td>
-                            <td>TBD</td>
+                            <td>physgen to physgen3d: Crafting a Miniature Interactive World from a Single Image</td>
                             <td>Shaowei Liu</td>
                         </tr>
                         <tr>
