--- a/index.html
+++ b/index.html
@@ -455,32 +455,35 @@
             </div>
         </div>
         
-        <div class="session">
-            <h2 class="session-title">Panel Sessions</h2>
-            <div class="session-content">
-                <table>
-                    <thead>
-                        <tr>
-                            <th>Time</th>
-                            <th>Session</th>
-                            <th>Details</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>1:15-2:00</td>
-                            <td>Faculty Panel</td>
-                            <td>Discussion with faculty members</td>
-                        </tr>
-                        <tr>
-                            <td>2:00-3:00</td>
-                            <td>Alumni Panel</td>
-                            <td>Discussion with program alumni</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
+    <div class="session">
+    <h2 class="session-title">Panel Sessions</h2>
+    <div class="session-content">
+        <table>
+            <thead>
+                <tr>
+                    <th>Time</th>
+                    <th>Session</th>
+                    <th>Details</th>
+                    <th>Moderators</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>1:15-2:00</td>
+                    <td>Faculty Panel</td>
+                    <td>Discussion with faculty members</td>
+                    <td>Aditya Prakash and Zhen Zhu</td>
+                </tr>
+                <tr>
+                    <td>2:00-3:00</td>
+                    <td>Alumni Panel</td>
+                    <td>Discussion with program alumni</td>
+                    <td>Sethuraman T V and Savya Khosla</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
         
         <div class="session">
             <h2 class="session-title">Oral Session 3</h2>
