--- a/index.html
+++ b/index.html
@@ -472,13 +472,13 @@
                     <td>1:15-2:00</td>
                     <td>Faculty Panel</td>
                     <td>Discussion with faculty members</td>
-                    <td>Aditya Prakash and Zhen Zhu</td>
+                    <td>Aditya Prakash & Zhen Zhu</td>
                 </tr>
                 <tr>
                     <td>2:00-3:00</td>
                     <td>Alumni Panel</td>
                     <td>Discussion with program alumni</td>
-                    <td>Sethuraman T V and Savya Khosla</td>
+                    <td>Sethuraman T V & Savya Khosla</td>
                 </tr>
             </tbody>
         </table>
