--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
                         </tr>
                         <tr>
                             <td>10:50-11:00</td>
-                            <td>(ICCV Submission) Perceive, Simulate, Imitate: a Simple Framework for Cross-Embodiment Visual Imitation</td>
+                            <td>Perceive, Simulate, Imitate: a Simple Framework for Cross-Embodiment Visual Imitation</td>
                             <td>Albert Zhai</td>
                         </tr>
                         <tr>
@@ -439,7 +439,7 @@
                         </tr>
                         <tr>
                             <td>11:40-11:50</td>
-                            <td>My Recent ICCV'25 Submission - DiffVax: Optimization-Free Image Immunization Against Diffusion-Based Editing</td>
+                            <td>DiffVax: Optimization-Free Image Immunization Against Diffusion-Based Editing</td>
                             <td>Ozgur Kara</td>
                         </tr>
                         <tr>
